#278 - introduce tabbed pane UI component